<resources>
    <string name="app_name">Place Tracker</string>
    <string name="internet_connection_error">No Internet connection! Please connect to search.</string>
    <string name="empty_list">You have no places yet!\nAdd them with the search bar.</string>
    <string name="my_places">My Places</string>
    <!--menu text-->
    <string name="add_place_manually">Add a place manually</string>
    <string name="refresh">Refresh my places</string>
    <string name="random_picker">Random picker</string>
    <!--EditText hints in DetailActivity-->
    <string name="name_hint">Name of place</string>
    <string name="address_hint">Address of place</string>
    <string name="notes_hint">Any notes about this place.</string>
    <!--Strings used in DetailActivity-->
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="num_visits_label">Number of visits:</string>
    <string name="dates_visited">Dates Visited:</string>
    <string name="add_visit">Add Visit</string>
    <string name="notes_label">Notes:</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="last_visit">Last visit:</string>
    <string name="existing_place_message">This place is already in your list!</string>
    <string name="desc_down_arrow">down arrow</string>
    <!--used in last visit TextView, ex. June 30, 2020 at 5:20 pm-->
    <string name="at">" at "</string>
    <string name="question_mark">" ?"</string>
    <!--used by place delete alert dialog-->
    <string name="delete_place_title">Delete place</string>
    <string name="delete_place_message">"Are you sure you want to delete "</string>
    <!--date time picker buttons-->
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="copy_visit">Copy Visit</string>
    <string name="delete_visit">Delete Visit</string>
    <!--visit delete alert dialog-->
    <string name="delete_visit_title">Delete visit</string>
    <string name="delete_visit_message">"Are you sure you want to delete this visit on "</string>
    <!--place photo-->
    <string name="desc_place_photo">place photo</string>
    <!--add manual place-->
    <string name="add">Add</string>
    <!--refresh notification and Toasts-->
    <string name="refresh_notification_channel_name">Refresh Channel</string>
    <string name="refresh_notification_title">Refreshing your places</string>
    <string name="refresh_notification_text">Refreshing…</string>
    <string name="refresh_finished">Finished refreshing your places</string>
    <string name="refresh_internet_connection_error">No Internet connection! Please connect to refresh.</string>
    <string name="refresh_too_much_data_error">Too much data fetched. Canceling refresh.</string>
    <!--widget-->
    <string name="default_widget_name_text">Select a place!</string>
    <string name="default_widget_address_text">Address will go here.</string>
    <string name="default_widget_num_visits_text">0</string>
    <string name="desc_widget_name">Widget place name</string>
    <string name="desc_widget_address">Widget place address</string>
    <string name="desc_widget_num_visits">Widget number of visits</string>
    <string name="add_widget">Add widget</string>
    <!--random picker empty-->
    <string name="random_pick_empty_error">No places yet! Can\'t pick a place.</string>
    <string name="visit_date_time_copy_label">visit date and time</string>
    <string name="visit_date_time_copy_confirm_message">Copied date and time to clipboard</string>
    <!--refresh places alert dialog-->
    <string name="refresh_places_message">Refreshing will replace all names and addresses with new info. Are you sure you want to continue?</string>
    <string name="refresh_places_title">Refresh places</string>
    <!--place name empty-->
    <string name="empty_place_name_error">Please enter a valid name</string>
    <string name="desc_drag_handle">drag handle</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <!--empty places list and edit button clicked-->
    <string name="edit_empty_list_error">No places yet! Please add a place to edit.</string>
</resources>
