<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="true"
            android:spinnersShown="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_picker" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_picker">

            <Button
                android:id="@+id/date_time_set"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:minHeight="40dp"
                android:text="@string/set"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:minHeight="40dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <!--<Button
            android:id="@+id/date_time_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@drawable/button_selector"
            android:minHeight="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_picker" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:minHeight="40dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/date_time_set"
            app:layout_constraintTop_toBottomOf="@+id/time_picker" />-->

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/delete_visit"
            android:background="@drawable/button_selector"
            android:minHeight="40dp"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>